Fix Find Command Parser to handle whitespaces